# OrthoAttn

./: .gitignore  README.md  ablation_study copy.py  ablation_study.py  attention_family_benchmark.py  benchmark_complexity.py  dsra_layer.py  dsra_model copy.py  dsra_model.py  json_retrieval_test.py  main.py  needle_in_haystack_test.py  pyproject copy.toml  pyproject.toml  report_utils.py  test_input copy.json  test_llm_compatibility.py  toy_task_associative_recall.py
config/: __init__.py  experiment_config.py
mhdsra2/: improved_dsra_mha.py  paged_exact_memory.py  verify_mhdsra2.py
reports/: README.md  ablation_study_full_output.txt  all_output.txt  dependency_osv_audit.json  json_retrieval_report.json  mhdsra2_batch_retrieval_quality_smoke.json  mhdsra2_batch_retrieval_quality_smoke.md  mhdsra2_batched_retrieval_profile.json  mhdsra2_batched_retrieval_profile.md  mhdsra2_carry_diagnostic_grid.checkpoint.jsonl  mhdsra2_carry_diagnostic_grid.json  mhdsra2_carry_diagnostic_grid.md  mhdsra2_carry_diagnostic_grid.smoke.checkpoint.jsonl  mhdsra2_curriculum_strategy_grid.json  mhdsra2_curriculum_strategy_grid.md  mhdsra2_forgetting_curve.json  mhdsra2_forgetting_curve.md  mhdsra2_layer_emergence_curve.json  mhdsra2_layer_emergence_curve.md  mhdsra2_niah_2m_scale_benchmark.json  mhdsra2_niah_2m_scale_benchmark.md  mhdsra2_niah_2m_verification.json  mhdsra2_niah_2m_verification.md  mhdsra2_quality_improvement_ablation.json  mhdsra2_two_digit_diagnostic_grid.md  (+15 more)
reports copy/: all_output.txt  json_retrieval_full_output.txt  json_retrieval_report.json  json_retrieval_report.md
(+517 files in other folders)
