[build-system]
requires = ["setuptools>=78.1.1,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsra-attn"
version = "0.1.0"
description = "DSRA attention verification suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "swanlab>=0.4",
  "datasets>=2.18",
  "idna>=3.15",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
exclude = [".env", ".pytest_cache", ".ruff_cache", "__pycache__", "archive", "tmp_*"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
per-file-ignores = { "scripts/main.py" = ["E402"], "scripts/verify_mhdsra2.py" = ["E402"], "scripts/mhdsra2_forgetting_curve_report.py" = ["E402"], "scripts/diagnostic_memory_benchmark.py" = ["E402"], "scripts/tiny_llama_baseline.py" = ["E402"], "scripts/tiny_llama_compare.py" = ["E402"], "scripts/tiny_llama_mhdsra2.py" = ["E402"] }

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [".env"]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
